--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Baker's Store</title>
+</head>
 
+<body>
+    <div class="navi-bar">Home Menu Contact About Us</div>
+    
+    <div class="hero-sec"></div>
+
+    <div class="about-us-section"></div>
+</body>
 </html>
