--- a/index.html
+++ b/index.html
@@ -7,10 +7,22 @@
 </head>
 
 <body>
-    <div class="navi-bar">Home Menu Contact About Us</div>
+    <div class="navi-bar">
+        Home Menu Contact About Us
+    </div>
     
-    <div class="hero-sec"></div>
+    <div class="hero-sec">
+        <img src="">
+    </div>
 
-    <div class="about-us-section"></div>
+    <div class="about-us-section">
+        A brief history of the bakery.
+
+        A few images of the shop and team.
+    </div>
+
+    <div class="special-offer-sec">
+        Displays a random daily special (e.g., “20% off Chocolate Cake today!”) using JavaScript.
+    </div>
 </body>
 </html>
