--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
-    
-    <title>The Baker's Store</title>
+
+    <title>The Baker's House</title>
 </head>
 
 <body>
+    <div class="panel-header"> THE BAKER'S HOUSE</div>
+
     <div class="navi-bar">
-        Home Menu Contact About Us
+        <div>Home</div>
+        <div>Menu</div>
+        <div>Contant</div>
+        <div>About Us</div>
     </div>
     
     <div class="hero-sec">
